--- a/flask-server/webapp/templates/home.html
+++ b/flask-server/webapp/templates/home.html
@@ -6,10 +6,9 @@
 	<title>Home page</title>
 
 	<link  href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
-	<link  href="{{ url_for('static', filename='css/jquery.fancybox.min.css') }}" rel="stylesheet">
-
 	<script src="{{ url_for('static', filename='js/jquery-3.1.1.min.js') }}"></script>
-	<script src="{{ url_for('static', filename='js/jquery.fancybox.min.js') }}"></script>
+	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+
 
 </head>
 <body>
